# ao-rs

./: Cargo.toml  README.md
examples/: sine.rs
src/: ffi.rs  lib.rs
